# ai-tg-chat-bot

./: .env.example  README.md  entrypoint.py  pyproject.toml  tg_db.sqlite3  tmp.py
latoken/: const.py
src/abstracts/: aggregator_builder.py  ai_api_interface.py  async_repository.py  async_service.py  repository.py  service.py
src/config/: orm.py  settings.py
src/tg_bot/: const.py  repositories.py  services.py
src/tg_bot/app/: builder.py
src/tg_bot/handlers/: about_handler.py  endpoints_handler.py  menu_handler.py  start_handler.py  text_message_hanler.py
src/tg_bot/keyboards/: about_company.py  builder.py  main_menu.py
src/tg_bot/migrations/: 0001_initial.py  0002_rename_tg_id_telegramuser_id.py  0003_alter_telegramuser_table.py  0004_chathistory.py  0005_alter_chathistory_options.py
src/tg_bot/models/: __init__.py  chat_history.py  user.py
utils/chat_bots/: chatgpt4.py
